# pysikuli

./: .gitignore  README.md  dev_utils.py  pyproject.toml  test.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  tutorials.rst
docs/source/tutorials/calculator/calculator_source/: main.py
src/pysikuli/: __init__.py  _config.py  _main.py  _osx.py  _unix.py  _utils.py  _win.py  config.py  keys.py  main.py  refresh_rate.py
src/pysikuli/tools/: get_location.py  get_region.py
test/: __init__.py  test_pysikui.py
tests/: test_pysikuli.py
tests/pysikuli/: test_config.py  test_main.py  test_osx.py  test_unix.py  test_utils.py  test_win.py
