[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = [ "Oleg Smoliakov <oleggsmolyakov@gmail.com>",]
name = "pysikuli"
version = "0.0.19"
description = "Fast cross-platform RPA tool for GUI automation"
readme = "README.md"
license = "LGPL-3.0-only"
repository = "https://github.com/OlegSmoliakov/pysikuli"
documentation = "https://pysikuli.readthedocs.io"
keywords = [ "gui", "automation", "desktop", "RPA", "test", "testing", "cross-platform", "window", "control", "menu", "title", "name", "geometry", "size", "position", "move", "resize", "minimize", "maximize", "restore", "hide", "show", "activate", "raise", "lower", "close", "screen-size", "mouse-position", "keyboard", "mouse", "cursor", "click", "press", "keystroke", "screen", "screenshot", "screencapture", "screengrab", "clipboard",]
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.10", "Operating System :: OS Independent", "Topic :: Home Automation", "Topic :: Software Development :: Testing", "Development Status :: 3 - Alpha", "Topic :: Utilities",]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.42.0"
mss = "^9.0.1"
opencv-python = "4.6.0.66"
send2trash = "^1.8.2"
pyhotkey = "^1.5.0"
pywinctl = "^0.3"
pymsgbox = "^1.0.9"
gitignore-parser = "^0.1.11"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
pyperclip = "^1.8.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.6.1"
twine = "^4.0.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mutagen = "^1.47.0"
sphinx = ">=7.1.2"
sphinx-rtd-theme = ">=1.3.0rc1"
esbonio = "^0.16.4"
toml = "^0.10.2"
